<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/backgroundColor"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_channel_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:paddingVertical="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        tools:text="7788" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingHorizontal="4dp"
        android:paddingVertical="4dp">

        <include
            android:id="@+id/container_01"
            layout="@layout/living_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/container_03"
            app:layout_constraintEnd_toStartOf="@id/container_02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/container_02"
            layout="@layout/living_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/container_03"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_01"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/container_03"
            layout="@layout/living_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/container_02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container_01" />

        <include
            android:id="@+id/container_04"
            layout="@layout/living_item"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/container_03"
            app:layout_constraintTop_toBottomOf="@id/container_02" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginVertical="8dp"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_button"
            android:src="@drawable/ic_video"
            android:contentDescription="@string/video" />

        <ImageButton
            android:id="@+id/btn_mic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_button"
            android:src="@drawable/ic_mic"
            android:contentDescription="@string/mic" />

        <ImageButton
            android:id="@+id/btn_screen_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_button"
            android:src="@drawable/ic_screen_share"
            android:contentDescription="@string/screen_share" />

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_button"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/close" />

    </LinearLayout>

</LinearLayout>